added tests to recipe service