@@ -8,10 +8,11 @@ import com.recipeservice.mapper.RecipeMapper;
 import com.recipeservice.model.Recipe;
 import com.recipeservice.repository.RecipeRepository;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.anyInt;
 
 import com.recipeservice.service.PexelsService;
+import com.recipeservice.service.RecipeService;
 import com.recipeservice.service.RecipeTagService;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
@@ -24,6 +25,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.http.MediaType;
 import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.web.reactive.function.BodyInserters;
@@ -33,10 +35,8 @@ import reactor.core.publisher.Mono;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
+import java.util.function.Function;
 
 
 @SpringBootTest
@@ -90,7 +90,7 @@ public class RecipeServiceImplTest {
                 200,
                 "imageUrl",
                 Collections.emptyList(),
-                Collections.emptyList()
+                List.of(1,2)
         );
         createRecipeDto = new CreateRecipeDto(
                 sampleRecipeDto.id(),
@@ -128,34 +128,152 @@ public class RecipeServiceImplTest {
         assertEquals(sampleRecipeDto, result);
     }
 
+    @Test
+    void getIngredientsByIds_ReturnsListOfIngredients_WhenCalledWithValidIds() {
+        List<Integer> ids = List.of(1, 2, 3);
+        List<IngredientDto> expectedIngredients = List.of(
+                new IngredientDto(1, "Salt", "test","test","test"),
+                new IngredientDto(2, "Pepper","test","test","test"),
+                new IngredientDto(3, "Sugar","test","test","test")
+        );
+        WebClient.RequestHeadersUriSpec mockRequestHeadersUriSpec = mock(WebClient.RequestHeadersUriSpec.class);
+        WebClient.RequestHeadersSpec mockRequestHeadersSpec = mock(WebClient.RequestHeadersSpec.class);
+        WebClient.ResponseSpec mockResponseSpec = mock(WebClient.ResponseSpec.class);
+        when(mockWebClient.get()).thenReturn(mockRequestHeadersUriSpec);
+        when(mockRequestHeadersUriSpec.uri(any(Function.class))).thenReturn(mockRequestHeadersSpec);
+        when(mockRequestHeadersSpec.retrieve()).thenReturn(mockResponseSpec);
+        when(mockResponseSpec.bodyToMono(new ParameterizedTypeReference<List<IngredientDto>>() {})).thenReturn(Mono.just(expectedIngredients));
+        List<IngredientDto> result = recipeService.getIngredientsByIds(ids);
+        assertEquals(expectedIngredients, result);
+    }
+
 
 
     @Test
     void getRecipesByIngredients() {
+        int count = 2;
+        List<String> tags = List.of("ingredient1", "ingredient2");
+        List<Integer> ids = List.of(sampleRecipeDto.id(), secondSampleRecipeDto.id());
+        List<Recipe> recipes = List.of(RecipeMapper.toEntity(sampleRecipeDto), RecipeMapper.toEntity(secondSampleRecipeDto));
+        when(recipeRepository.findRecipesIdsByTags(tags, count)).thenReturn(ids);
+        when(recipeRepository.findAllById(ids)).thenReturn(recipes);
+        List<RecipeDto> foundRecipes = recipeService.searchRecipesByTags(tags);
+        assertEquals(ids.size(), foundRecipes.size());
+        assertTrue(foundRecipes.contains(sampleRecipeDto));
+        assertTrue(foundRecipes.contains(secondSampleRecipeDto));
     }
 
     @Test
-    void getRecipesList() {
+    void searchRecipesByTagsShouldReturnEmptyList() {
+        List<String> tags = List.of("nonExistentTag1", "nonExistentTag2");
+        when(recipeRepository.findRecipesIdsByTags(tags, tags.size())).thenReturn(Collections.emptyList());
+        List<RecipeDto> foundRecipes = recipeService.searchRecipesByTags(tags);
+        assertTrue(foundRecipes.isEmpty());
     }
+
+    @Test
+    void searchRecipesByTagsShouldReturnSingleResult() {
+        List<String> tags = List.of("singleTag");
+        List<Integer> ids = List.of(sampleRecipeDto.id());
+        List<Recipe> recipes = List.of(RecipeMapper.toEntity(sampleRecipeDto));
+        when(recipeRepository.findRecipesIdsByTags(tags, 1)).thenReturn(ids);
+        when(recipeRepository.findAllById(ids)).thenReturn(recipes);
+        List<RecipeDto> foundRecipes = recipeService.searchRecipesByTags(tags);
+        assertEquals(1, foundRecipes.size());
+        assertTrue(foundRecipes.contains(sampleRecipeDto));
+    }
+
+    @Test
+    void searchRecipesByTagsShouldReturnRecipeWithPartialIngredients() {
+        List<String> tags = List.of("tag1", "tag2", "tag3");
+        List<Integer> ids = List.of(sampleRecipeDto.id());
+        List<Recipe> recipes = List.of(RecipeMapper.toEntity(sampleRecipeDto));
+        when(recipeRepository.findRecipesIdsByTags(tags, 3)).thenReturn(ids);
+        when(recipeRepository.findAllById(ids)).thenReturn(recipes);
+        List<RecipeDto> foundRecipes = recipeService.searchRecipesByTags(tags);
+        assertEquals(1, foundRecipes.size());
+        assertTrue(foundRecipes.contains(sampleRecipeDto));
+    }
+
+    @Test
+    void searchRecipesByTagsShouldThrowRepositoryError() {
+        List<String> tags = List.of("tag1");
+        when(recipeRepository.findRecipesIdsByTags(tags, 1)).thenThrow(new RuntimeException("DB error"));
+        assertThrows(RuntimeException.class, () -> recipeService.searchRecipesByTags(tags));
+    }
+
+    @Test
+    void getRecipesListShouldReturnListOfRecipes() {
+        List<Recipe> recipes = List.of(RecipeMapper.toEntity(sampleRecipeDto), RecipeMapper.toEntity(secondSampleRecipeDto));
+        when(recipeRepository.findAll()).thenReturn(recipes);
+        List<RecipeDto> recipesList = recipeService.getRecipesList();
+        assertEquals(2, recipesList.size());
+        assertTrue(recipesList.containsAll(List.of(sampleRecipeDto, secondSampleRecipeDto)));
+    }
+
+    @Test
+    void getRecipesListShouldReturnEmptyList() {
+        when(recipeRepository.findAll()).thenReturn(Collections.emptyList());
+        List<RecipeDto> recipesList = recipeService.getRecipesList();
+        assertTrue(recipesList.isEmpty());
+    }
+
+    @Test
+    void getRecipesListShouldReturnSingleRecipe() {
+        List<Recipe> recipes = List.of(RecipeMapper.toEntity(sampleRecipeDto));
+        when(recipeRepository.findAll()).thenReturn(recipes);
+        List<RecipeDto> recipesList = recipeService.getRecipesList();
+        assertEquals(1, recipesList.size());
+        assertTrue(recipesList.contains(sampleRecipeDto));
+    }
+
 
     @Test
     void getFavoriteRecipes() {
     }
 
+
     @Test
-    void deleteRecipe() {
+    void deleteRecipeWithValidId() {
+        int recipeId = 1;
+        doNothing().when(recipeRepository).deleteById(recipeId);
+        recipeService.deleteRecipe(recipeId);
+        verify(recipeRepository, times(1)).deleteById(recipeId);
     }
 
     @Test
-    void getRandomRecipe() {
+    void deleteRecipeShouldThrowExceptionWhenNonExistentId() {
+        int nonExistentRecipeId = 999;
+        doThrow(new EmptyResultDataAccessException(1)).when(recipeRepository).deleteById(nonExistentRecipeId);
+
+        assertThrows(EmptyResultDataAccessException.class, () -> recipeService.deleteRecipe(nonExistentRecipeId));
+        verify(recipeRepository, times(1)).deleteById(nonExistentRecipeId);
     }
 
     @Test
-    void getRecipeById() {
+    void getRandomRecipeShouldReturnRecipe() {
+        List<Recipe> recipesList = List.of(RecipeMapper.toEntity(sampleRecipeDto), RecipeMapper.toEntity(secondSampleRecipeDto));
+        when(recipeRepository.findAll()).thenReturn(recipesList);
+        RecipeDto result = recipeService.getRandomRecipe();
+        assertNotNull(result);
     }
 
     @Test
-    void getIngredientsByIds() {
+    void getRecipeByIdShouldReturnsRecipe() {
+        int givenId = 1;
+        Recipe sampleRecipe = RecipeMapper.toEntity(sampleRecipeDto);
+        when(recipeRepository.findById(givenId)).thenReturn(Optional.of(sampleRecipe));
+        Optional<RecipeDto> result = recipeService.getRecipeById(givenId);
+        assertTrue(result.isPresent());
+        assertEquals(sampleRecipeDto, result.get());
+    }
+
+    @Test
+    void getRecipeByIdShouldReturnsEmptyOptional() {
+        int givenId = 2;
+        when(recipeRepository.findById(givenId)).thenReturn(Optional.empty());
+        Optional<RecipeDto> result = recipeService.getRecipeById(givenId);
+        assertFalse(result.isPresent());
     }
 
     @Test
